# generix

./: .cproject  .project  CMakeLists.txt  Generix  Generix.kdev4  Initrd.img  Make.pl  Makefile  Run.sh  adg  mkinitrd.sh
.kdev4/: Generix.kdev4
Boot/: GeneriXOS-0.0.1.iso  GeneriXOS.iso  Generix.iso
Boot/Grub/: menu.lst  stage2_eltorito_vesa
Img/: cooltext.com
Initrd/Home/DnyaneshG/: File1.txt  Instructions.txt  randPasswd.sh
Scripts/: build.pm  config.pm  emulate.sh  iso.sh
Src/: .cproject  .gdbinit  .project  CMakeLists.txt  Kernel32.elf  Makefile  adg  config.mk  rules.mk
Src/Drivers/: CMakeLists.txt  drivers.mk
Src/Drivers/Video/: CMakeLists.txt  Video.cpp  Video.hpp
Src/Drivers/Video/Text/: .goutputstream-69YNLW  CMakeLists.txt  TextMode.cpp  TextMode.hpp
Src/FileSystem/: CMakeLists.txt  File.cpp  File.hpp  FileSystem.cpp  FileSystem.hpp  FileSystem.mk  FileSystemInterface.cpp  FileSystemInterface.hpp  VirtualFileSystem.cpp  VirtualFileSystem.hpp
Src/FileSystem/CPIO/: CMakeLists.txt  CpioFileSystem.cpp  CpioFileSystem.hpp
Src/FileSystem/DevFS/: CMakeLists.txt  DevFileSystem.cpp  DevFileSystem.hpp
Src/FileSystem/Ext2/: CMakeLists.txt
Src/FileSystem/FAT/: CMakeLists.txt
Src/FileSystem/Tar/: CMakeLists.txt  TarFileSystem.cpp  TarFileSystem.hpp
Src/Include/: Assert.hpp  Bitmap.hpp  ColorCode.hpp  Device.hpp  Driver.hpp  FileSystemManager.hpp  Init.hpp  KError.hpp  Kernel.hpp  Macros.hpp  Main.hpp  MemoryManager.hpp  Multiboot.hpp  ScreenIo.hpp  Support.hpp  Types.hpp  Vga.hpp
Src/Include/Klib/liballoc/: Allocator.hpp
Src/Include/Klib/libc/: ctype.h  errno.h  limits.h  stdarg.h  stdio.h  stdlib.h  string.h  va_list.h
Src/Include/Klib/libc++/: HashTable.hpp  List.hpp  Singleton.hpp
Src/Include/Klib/libposix/sys/: types.h
Src/Include/Processor/: Processor.hpp  ProcessorInfo.hpp
Src/Include/Processor/x86/: CPU.hpp  Gdt.hpp  IOPort.hpp  Idt.hpp  Interrupt.hpp  Memory.hpp  Timer.hpp
Src/Kernel/: CMakeLists.txt  Device.cpp  Driver.cpp  FileSystemManager.cpp  KError.cpp  Kernel.cpp  Main.cpp  MemoryManager.cpp  New.cpp  ScreenIo.cpp  Support.cpp  Vga.cpp  kernel.mk
Src/Kernel/Processor/: CMakeLists.txt  Processor.cpp
Src/Kernel/Processor/x86/: CMakeLists.txt  Gdt.cpp  IOPort.cpp  Idt.cpp  Interrupt.cpp  Memory.cpp  Timer.cpp
Src/Kernel/Processor/x86/Asm/: Boot.asm  CMakeLists.txt  DescriptorTableFlush.asm  Interrupt.asm
Src/Klib/: CMakeLists.txt  libraries.mk
Src/Klib/liballoc/: Allocator.cpp
Src/Klib/libc/: ctype.c
Src/Klib/libc/stdio/: printf.c  sprintf.c  vsprintf.c
Src/Klib/libc/stdlib/: atoi.c  itoa.c
Src/Klib/libc/string/: bzero.c  memcpy.c  memmove.c  memset.c  strcat.c  strchr.c  strcmp.c  strcpy.c  strcspn.c  strlen.c  strlwr.c  strncat.c  strncmp.c  strncpy.c  strpbrk.c  strrchr.c  strrev.c  strspn.c  strtok.c  strupr.c  strxfrm.c
Src/Linker/: Linker32-old.ld  Linker32.ld  Linker64.ld
Src/Mem/: CMakeLists.txt  KHeap.hpp  KMalloc.cpp  KMalloc.hpp  Memory.cpp  Memory.hpp  Memory.mk  Paging.cpp  Paging.hpp  PhysicalMemory.cpp  PhysicalMemory.hpp  VirtualMemory.cpp  VirtualMemory.hpp
Tools/: Image.c  qemu-efi-bios.tar.bz2
Tools/adg/: EULA.TXT  adg  adg32  adg32_driver  adg_driver
Tools/adg/lib/: libQtCore.so.4
Tools/adg/lib64/: libQtCore.so.4
gboot/nbproject/: Package-Default.bash  configurations.xml  project.xml
gboot/nbproject/private/: configurations.xml
gboot/src/: Makefile  config.mk
gboot/src/include/: stage0.h
gboot/src/stage0/: Makefile  stage0.asm  stage0.img
nbproject/: Package-Debug.bash  Package-Default.bash  configurations.xml  project.xml
nbproject/private/: Debug.properties  Default.properties  configurations.xml
