 
SET( LIBC        stdc )
SET( LIBCPP      stdc++ )
SET( LIBALLOC    alloc )
SET( LIBPOSIX    posix )

FILE( GLOB_RECURSE LIBC_SRC_FILES ${PROJ_SRC_PATH}/Klib/libc/*.c
                             ${PROJ_SRC_PATH}/Klib/libc/stdio/*.c
                             ${PROJ_SRC_PATH}/Klib/libc/stdlib/*.c
                             ${PROJ_SRC_PATH}/Klib/libc/string/*.c )

FILE( GLOB_RECURSE LIBC_INCLUDE_FILES ${PROJ_SRC_PATH}/Include/Klib/libc/*.h )

FILE( GLOB_RECURSE LIBALLOC_SRC_FILES ${PROJ_SRC_PATH}/Klib/liballoc/*.cpp )
FILE( GLOB_RECURSE LIBALLOC_INCLUDE_FILES ${PROJ_SRC_PATH}/Include/Klib/liballoc/*.hpp )

ADD_LIBRARY( ${LIBC} STATIC ${LIBC_SRC_FILES} ${LIBC_INCLUDE_FILES} )
SET_TARGET_PROPERTIES( ${LIBC} PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${PROJ_SRC_PATH}/Klib/ )

ADD_LIBRARY( ${LIBALLOC} STATIC ${LIBALLOC_SRC_FILES} ${LIBALLOC_INCLUDE_FILES} )
SET_TARGET_PROPERTIES( ${LIBALLOC} PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${PROJ_SRC_PATH}/Klib/ )